Remove utils package
