# docs/swagger.json
@@ -89,13 +89,13 @@
                     "400": {
                         "description": "User form validation error",
                         "schema": {
-                            "$ref": "#/definitions/utils.FormErrorSerializer"
+                            "$ref": "#/definitions/http.FormErrorSerializer"
                         }
                     },
                     "default": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorMsg"
+                            "$ref": "#/definitions/http.ErrorMsg"
                         }
                     }
                 }
@@ -142,13 +142,13 @@
                     "400": {
                         "description": "Enroll form validation error",
                         "schema": {
-                            "$ref": "#/definitions/utils.FormErrorSerializer"
+                            "$ref": "#/definitions/http.FormErrorSerializer"
                         }
                     },
                     "default": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorMsg"
+                            "$ref": "#/definitions/http.ErrorMsg"
                         }
                     }
                 }
@@ -188,13 +188,13 @@
                     "400": {
                         "description": "Wallet transfer validation error",
                         "schema": {
-                            "$ref": "#/definitions/utils.FormErrorSerializer"
+                            "$ref": "#/definitions/http.FormErrorSerializer"
                         }
                     },
                     "default": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorMsg"
+                            "$ref": "#/definitions/http.ErrorMsg"
                         }
                     }
                 }
@@ -243,6 +243,28 @@
                 }
             }
         },
+        "http.ErrorMsg": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.FormErrorSerializer": {
+            "type": "object",
+            "properties": {
+                "messages": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "serializers.UserSerializer": {
             "type": "object",
             "properties": {
@@ -265,28 +287,6 @@
             "properties": {
                 "wallet_from": {
                     "type": "integer"
-                }
-            }
-        },
-        "utils.ErrorMsg": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "utils.FormErrorSerializer": {
-            "type": "object",
-            "properties": {
-                "messages": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "array",
-                        "items": {
-                            "type": "string"
-                        }
-                    }
                 }
             }
         }
