# internal/transport/http/forms/errors.go
@@ -1,25 +1,10 @@
-package utils
+package forms
 
 import (
-	"encoding/json"
-	"net/http"
 	"strings"
 
 	"github.com/go-playground/validator"
 )
-
-type FormErrorSerializer struct {
-	Messages map[string][]string `json:"messages"`
-}
-
-type ErrorMsg struct {
-	Message string `json:"message"`
-}
-
-func JsonResponseError(w http.ResponseWriter, status int, message string) {
-	w.WriteHeader(status)
-	_ = json.NewEncoder(w).Encode(ErrorMsg{Message: message})
-}
 
 // ValidateForm performs base form validation
 func ValidateForm(form interface{}, formErrors map[string][]string) map[string][]string {
@@ -30,16 +15,16 @@ func ValidateForm(form interface{}, formErrors map[string][]string) map[string][
 			errKey := strings.ToLower(err.Field())
 			_, ok := formErrors[errKey]
 			if ok {
-				formErrors[errKey] = append(formErrors[errKey], ErrorTagMessage(err.Tag()))
+				formErrors[errKey] = append(formErrors[errKey], errorTagMessage(err.Tag()))
 			} else {
-				formErrors[errKey] = []string{ErrorTagMessage(err.Tag())}
+				formErrors[errKey] = []string{errorTagMessage(err.Tag())}
 			}
 		}
 	}
 	return formErrors
 }
 
-func ErrorTagMessage(tag string) string {
+func errorTagMessage(tag string) string {
 	var result string
 	switch tag {
 	case "required":
