# internal/transport/http/wallet.go
@@ -5,7 +5,6 @@ import (
 	"billing_system_test_task/internal/transport/http/forms"
 	"billing_system_test_task/internal/transport/http/serializers"
 	"billing_system_test_task/internal/usecases"
-	"billing_system_test_task/internal/utils"
 	"context"
 	"encoding/json"
 	"fmt"
@@ -32,8 +31,8 @@ func NewWalletsHandler(walletUseCase usecases.WalletUseCase) *WalletsHandler {
 // @Produce  json
 // @Param user body forms.WalletForm true "Transfer parameters"
 // @Success 200 {object} serializers.WalletSerializer "Wallet from id"
-// @Failure 400 {object} utils.FormErrorSerializer "Wallet transfer validation error"
-// @Failure default {object} utils.ErrorMsg
+// @Failure 400 {object} FormErrorSerializer "Wallet transfer validation error"
+// @Failure default {object} ErrorMsg
 // @Router /api/wallets/transfer/ [post]
 func (wh *WalletsHandler) Transfer(w http.ResponseWriter, r *http.Request) {
 	var (
@@ -43,7 +42,7 @@ func (wh *WalletsHandler) Transfer(w http.ResponseWriter, r *http.Request) {
 	decoder := json.NewDecoder(r.Body)
 	decodeErr := decoder.Decode(&walletForm)
 	if decodeErr != nil {
-		utils.JsonResponseError(w, http.StatusBadRequest, fmt.Sprintf("Error json form decoding: %s", decodeErr))
+		JsonResponseError(w, http.StatusBadRequest, fmt.Sprintf("Error json form decoding: %s", decodeErr))
 		return
 	}
 
@@ -52,13 +51,13 @@ func (wh *WalletsHandler) Transfer(w http.ResponseWriter, r *http.Request) {
 	if formError != nil {
 		log.Println(fmt.Sprintf("[ERROR] Transfer error - %s", *formError))
 		w.WriteHeader(http.StatusBadRequest)
-		_ = json.NewEncoder(w).Encode(utils.FormErrorSerializer{Messages: *formError})
+		_ = json.NewEncoder(w).Encode(FormErrorSerializer{Messages: *formError})
 		return
 	}
 
 	walletFrom, walletTransferErr := wh.walletUseCase.Transfer(ctx, walletForm.WalletFrom, walletForm.WalletTo, walletForm.Amount)
 	if walletTransferErr != nil {
-		utils.JsonResponseError(w, walletTransferErr.GetStatus(), fmt.Sprintf("Error of funds transfer: %s", walletTransferErr.GetError()))
+		JsonResponseError(w, walletTransferErr.GetStatus(), fmt.Sprintf("Error of funds transfer: %s", walletTransferErr.GetError()))
 		return
 	}
 	w.WriteHeader(http.StatusOK)
